# whisper-transcriber

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/output/: videoplayback.srt  videoplayback.txt
doc/: configuration.md
whisper_transcriber/: cli.py  config.py  logger.py  main.py  transcriber.py  utils.py
whisper_transcriber/core/: formats.py  model.py  progress.py  transcriber.py
whisper_transcriber/exporters/: base.py  json.py  manager.py  srt.py  tsv.py  txt.py  vtt.py
