[project]
name = "whisper-transcriber"
version = "0.1.0"
description = "Audio and video transcription using faster-whisper"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Lu" }
]

dependencies = [
  "faster-whisper"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"